[package]
name = "event-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
rdkafka = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
