[package]
name = "event-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
clickhouse = { version = "0.15.0", features = ["uuid", "chrono"] }
dotenvy = "0.15.7"
rdkafka = "0.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.17.0"
tokio-util = "0.7.18"
thiserror = "2.0.18"
